--- a/app/views/geinins/_geinin_info.html.erb
+++ b/app/views/geinins/_geinin_info.html.erb
@@ -57,7 +57,7 @@
         <li class="profile-nav-item">
           <%= link_to search_path(:performer => geinin.name) do %>
             <span class="profile-nav-label">ライブ登録数</span>
-            <span class="profile-value"><%= Event.default.where(event_performers: { performer: "#{geinin.name}"} ).count %></span>
+            <span class="profile-value"><%= Event.performer_search_count(geinin.name) %></span>
           <% end %>
         </li>
         <li class="profile-nav-item">
