--- a/app/views/terms.html.erb
+++ b/app/views/terms.html.erb
@@ -35,7 +35,7 @@
       <div class="typography terms">
         <p>wArally!運営は、当サービス「wArally! 」について以下を定めます。<br><br></p>
         <h3>定義</h3>
-        <li>wArally!の運営は<span class="accent"><b>「お笑いライブに来る人を増やしたい」</b></span>という思いでwArally!を運営しています。お笑いライブの情報や芸人の情報を手に入れやすくし、全てのお笑いを愛する人が楽しめるようなサービスを提供できるよう努力します。</li>
+        <li>wArally!の運営は<span class="accent"><b>「お笑いライブをもっと身近なものにしたい」</b></span>という思いでwArally!を運営しています。お笑いライブの情報や芸人の情報を手に入れやすくし、全てのお笑いを愛する人が楽しめるようなサービスを提供できるよう努力します。</li>
         <li>利用規約を確認した上でwArally!を継続的に利用している場合、利用規約に同意しているとみなします。もし利用規約に同意しかねる場合は、wArally!の利用を停止するか、wArally!運営に問い合わせをお願いします。<span class="accent"><b>wArally!運営は常に利用者の意見を聞くものとします。</b></span></li>
         <li>利用規約及びwArally!の準拠法は日本法とします。</li>
         <li>wArally!に関連する一切の紛争については、東京地方裁判所を第一審の専属的合意管轄裁判所と定めます。</li>
