--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,18 @@
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any styles
+ * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
+ * file per style scope.
+ *
+ *= require flatpickr
+ */
+
 @import "variables";
 
 /* CSSのリセット */
@@ -42,7 +57,7 @@ body{
     box-shadow: 0 0 1px 1px rgba(0,0,0,.05);
 }
 .flash {
-  margin-top:16px;
+  margin-top:$header_height;
   padding:20px 0;
   color: white;
   background-color: rgb(251, 170, 88);
@@ -233,7 +248,7 @@ header{
     overflow: hidden;
     position: relative;
     margin:0 auto;
-    margin-top:20px;
+    margin-top:$header_height;
     margin-bottom:20px;
     max-width:420px;
     min-height:90vh;
@@ -1162,7 +1177,7 @@ input[name="tab_item"],input[name="profile-nav-item"],input[name="index_item"] {
   display: none;
 }
 /*タブ切り替えの中身のスタイル*/
-.tab-content,.profile-nav-item-content,.index-content {
+.tab-content,.profile-nav-content,.index-content {
   display: none;
   clear: both;
   overflow: hidden;
@@ -1170,9 +1185,21 @@ input[name="tab_item"],input[name="profile-nav-item"],input[name="index_item"] {
 /*選択されているタブのコンテンツのみを表示*/
 #following-tab:checked ~ #following_content,
 #participates-tab:checked ~ #participates_content,
-#pendings-tab:checked ~ #pendings_content,
+#pendings-tab:checked ~ #pendings_content{
+  display: block;
+  overflow:hidden;
+}
+/*選択されているタブのスタイルを変える*/
+.tabs input:checked + .tab_item,.profile-nav input:checked + .profile-nav-item,.indexes input:checked + .index_item {
+  color:$accent_color;
+  background-color: $white_background_color;
+  border-bottom: 3px solid $accent_color;
+}
 #posted-event-tab:checked ~ #posted-event-tab-content,
-#following-geinin-tab:checked ~ #following-geinin-tab-content,
+#following-geinin-tab:checked ~ #following-geinin-tab-content{
+  display: block;
+  overflow:hidden;
+}
 #index-tab-0:checked ~ #index-tab-0-content,
 #index-tab-1:checked ~ #index-tab-1-content,
 #index-tab-2:checked ~ #index-tab-2-content,
@@ -1180,13 +1207,6 @@ input[name="tab_item"],input[name="profile-nav-item"],input[name="index_item"] {
 #index-tab-4:checked ~ #index-tab-4-content{
   display: block;
   overflow:hidden;
-}
-
-/*選択されているタブのスタイルを変える*/
-.tabs input:checked + .tab_item,.profile-nav input:checked + .profile-nav-item,.indexes input:checked + .index_item {
-  color:$accent_color;
-  background-color: $white_background_color;
-  border-bottom: 3px solid $accent_color;
 }
 .geinin-card {
     background-color: $white_background_color;
@@ -1402,7 +1422,6 @@ input[name="tab_item"],input[name="profile-nav-item"],input[name="index_item"] {
 @media(max-width:420px){
     .main{
         margin:0 auto;
-        margin-top:20px;
         padding:0 20px 60px 20px;
     }
     .search-form-container{
