--- a/app/views/events/_event_edit.html.erb
+++ b/app/views/events/_event_edit.html.erb
@@ -3,7 +3,7 @@
         <i class="fas fa-calendar-alt"></i>
       </div>
       <div class="form">
-        <%= f.datetime_select :datetime, :placeholder =>"開演日時 *", :class=>"SearchCalendar event-edit-form form-long", data: {min_date: 'today'},:required=>"true" %>
+        <%= f.text_field :datetime, :placeholder =>"開演日時(カレンダーで選択) *", data: {min_date: 'today'},data:{ provide:'flatpickr' }, id:"EventStart",class:" event-edit-form form-long",:required=>"true" %>
       </div>
     </div>
     <div class="form-item">
@@ -16,6 +16,7 @@
     </div>
     <div class="form-item">
       <div class="form-icon">
+        <i class="fas fa-map-marker-alt"></i>
       </div>
       <div class="form">
         <%= f.collection_select :place, Place.all, :name, :name,{:prompt => "ライブ会場を選択してください *"},{:class=>"event-select-form"} %>
@@ -23,7 +24,6 @@
     </div>
     <div class="form-item">
       <div class="form-icon">
-        <i class="fas fa-map-marker-alt"></i>
       </div>
       <div class="form">
          <%= f.text_field :place_free_entry,:placeholder => "ライブ会場(上のメニューにない場合) *",:class => "event-edit-form form-long" %>
@@ -97,7 +97,7 @@
         <i class="fas fa-ticket-alt"></i>
       </div>
       <div class="form">
-        <%= f.text_field :general_sale,:placeholder => "一般発売日時",:class => "event-edit-form form-long" %>
+        <%= f.text_field :general_sale, :placeholder =>"一般発売日時", data: {min_date: 'today'},data:{ provide:'flatpickr' }, class:" event-edit-form form-long", id:"GeneralSaleStart" %>
       </div>
     </div>
     <div class="form-item">
@@ -105,9 +105,9 @@
         <i class="fas fa-clock"></i>
       </div>
       <div class="form">
-        <%= f.text_field :presale_start,:placeholder => "先行販売開始日時",:class => "event-edit-form form-short" %>
+        <%= f.text_field :presale_start, :placeholder =>"先行販売開始日時", data: {min_date: 'today'},data:{ provide:'flatpickr' }, class:" event-edit-form form-short", id:"PreSaleStart" %>
         <span class="presale-period">〜</span>
-        <%= f.text_field :presale_end,:placeholder => "終了日時",:class => "event-edit-form form-short-2" %>
+        <%= f.text_field :presale_start, :placeholder =>"終了日時", data: {min_date: 'today'},data:{ provide:'flatpickr' }, class:" event-edit-form form-short", id:"PreSaleEnd" %>
       </div>
     </div>
     <%= f.submit '投稿する！', :class => "btn new green" %>
