--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -20,7 +20,8 @@
       </div>
       <div class="search-form-area">
         <%= form_tag(search_path, method: "get") do %>
-          <%= text_field_tag ':date', '',:type=>"text", :placeholder =>"日付を指定する(カレンダーで選択)", :id=>"SearchCalendar", data: {min_date: 'today'},data:{ provide:'flatpickr' }, class:"search-form" %>
+          <%= text_field_tag :date, '',:type=>"text", :placeholder =>"日付を指定する(カレンダーで選択)", data: {min_date: 'today'},data:{ provide:'flatpickr' }, class:"search-form SearchCalendar" %>
+          <%= submit_tag("Search") %>
         <% end %>
       </div>
     </div>
