--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -19,9 +19,8 @@
         <% end %>
       </div>
       <div class="search-form-area">
-        <%= form_tag(search_path, method: "get") do %>
-          <%= text_field_tag :date, '',:type=>"text", :placeholder =>"日付を指定する(カレンダーで選択)", data: {min_date: 'today'},data:{ provide:'flatpickr' }, class:"search-form SearchCalendar" %>
-          <%= submit_tag("Search") %>
+        <%= form_tag(search_path, method: "get",id: "search_event_by_date") do %>
+          <%= text_field_tag 'date','', placeholder: "日付を指定する(カレンダーで選択)", data:{ provide:'flatpickr' }, class: "search-form SearchCalendar", onChange: "_submit()" %>
         <% end %>
       </div>
     </div>
